<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/TableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="9dp"
        android:shrinkColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#34E60B"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_name"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_height"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/EditHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="meter"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_weight"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="kg"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:id="@+id/TblRbt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8C8C8C"
            android:gravity="center_horizontal|center_vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/result"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_bmi"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editBMi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:editable="false"
                android:ems="10"
                android:inputType="none" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_type"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:inputType="none" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>